--- a/package.json
+++ b/package.json
@@ -46,10 +46,12 @@
     "grunt-contrib-uglify": "^0.6.0",
     "grunt-contrib-yuidoc": "^0.5.2",
     "grunt-debug-task": "^0.1.5",
+    "grunt-eslint": "^14.0.0",
     "grunt-karma": "^0.9.0",
     "grunt-mocha-istanbul": "^2.1.0",
     "grunt-protractor-runner": "^1.2.1",
     "grunt-protractor-webdriver": "^0.2.0",
+    "jscs": "^1.13.1",
     "karma": "^0.12.28",
     "karma-chai": "*",
     "karma-chai-plugins": "^0.2.4",
